[package]
name = "ai-ida-xdp-ebpf"
version = "0.1.0"
edition = "2021"
description = "AI-IDA: برنامه مینیاتوری XDP/eBPF برای تست لایه Kernel Space"

[dependencies]
aya-ebpf = "0.1"
network-types = "0.0.4"

[[bin]]
name = "ai-ida-xdp"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
